[package]
name = "eco_sim_gui"
version = "0.1.0"
authors = ["Feisal Schlee <fschlee@techfak.uni-bielefeld.de>"]
edition = "2018"

[features]
default = ["vulkan"]
reload_shaders = []
vulkan = ["gfx-backend-vulkan"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
gl = ["gfx-backend-gl"]
[dependencies]
"eco_sim" = { path="../sim" }
"winit" = "^0.19.3"
"gfx-backend-vulkan" = { version = "0.3", features =["winit"], optional = true }
"gfx-backend-dx11" = { version = "0.3", optional = true }
"gfx-backend-dx12" = { version = "0.3", optional = true }
"gfx-backend-gl" = { version = "0.3", optional = true }
"gfx-hal" = "0.3"
"nalgebra" = "^0.17.*"
"log" = "^0.4"
"env_logger" = "^0.5"
"failure" = "^0.1"
"itertools" = "^0.8"
"lazy_static" = "^1"
"glium" = "*"
"arrayvec" = "*"
"image" = "*"
"shaderc" = "0.3"
"conrod_core"  = "^0.66"
"conrod_winit" = "^0.66"

[target.'cfg(macos)'.dependencies]
"gfx-backend-metal" = "0.3"

[[bin]]
name = "eco_sim"
path = "src/main.rs"
