[package]
name = "eco_sim_gui"
version = "0.1.0"
authors = ["Feisal Schlee <fschlee@techfak.uni-bielefeld.de>"]
edition = "2018"

[features]
default=["metal", "vulkan"]
reload_shaders = []
vulkan = ["gfx-backend-vulkan"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
gl = ["gfx-backend-gl"]
metal = ["gfx-backend-metal"]
x11 = ["gfx-backend-vulkan/x11"]
xcb = ["gfx-backend-vulkan/xcb"]

[dependencies]
"eco_sim" = { path="../sim" }
"enum_macros" = { path="../enum_macros" }

#logging
"log" = "^0.4"
"env_logger" = "^0.7"

#conveinince
"failure" = "^0.1"
"itertools" = "^0.8"
"strum" = "^0.16"
"strum_macros" = "^0.16"

#window/gui
"winit" = "^0.20.0-alpha4"
"conrod_core"  = "^0.68"
"conrod_winit" = "^0.68"

#graphics data etc
"arrayvec" = "*"
"smallvec" = "^0.6"
"image" = "*"
"shaderc" = "0.6"
"lazy_static" = "^1"
"nalgebra" = "^0.19.*"

#graphics
"gfx-hal" = "0.4"

"gfx-backend-gl" = { version = "0.4", features=["glutin"], optional = true }

[target.'cfg(windows)'.dependencies]
"gfx-backend-dx11" = { version = "0.4", optional = true }
"gfx-backend-dx12" = { version = "0.4", optional = true }

[target.'cfg(macos)'.dependencies]
"gfx-backend-metal" = { version = "0.4", optional = true }

[target."cfg(not(macos))".dependencies]
"gfx-backend-vulkan" = { version = "0.4", optional = true }

[build-dependencies]
"cmake" = "0.1.42"

[[bin]]
name = "eco_sim"
path = "src/main.rs"
