[package]
name = "eco_sim"
version = "0.1.0"
authors = ["Feisal Schlee <fschlee@techfak.uni-bielefeld.de>"]
edition = "2018"

[dependencies]
"enum_macros" = { path="../enum_macros" }

"log" = "^0.4"

"rand" = "^0.7"
"rand_xorshift" = "^0.2"
"rand_distr" = "^0.2.2"

"smallvec" = { version = "^0.6.9", features=["union"]}
"lazysort" = "*"
"itertools" = "^0.8"

"rayon" = "^1.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false