[package]
name = "eco_sim"
version = "0.1.0"
authors = ["Feisal Schlee <fschlee@techfak.uni-bielefeld.de>"]
edition = "2018"

[features]
torch = ["tch", "ndarray"]
reinforce = ["ndarray"]

[dependencies]
"enum_macros" = { path="../enum_macros" }

log = "^0.4"

"rand" = "^0.7"
"rand_xorshift" = "^0.2"
"rand_distr" = "^0.2"

smallvec = { version = "^1", features=["union"]}
lazysort = "*"
itertools = "^0.8"

ndarray = { version = "^0.13", optional = true }

rayon = "^1.2"

ordered-float = "^1.0"

tch = {version = "^0.1.3", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false